# rules_go_4084

./: .gitignore  BUILD.bazel  MODULE.bazel  go.mod  rand32.go
